8221473: Configuration::reads can use Set.copyOf
Reviewed-by: alanb, forax